[package]
name = "bark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bark-protocol = { workspace = true }

bitflags = { workspace = true }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
cpal = "0.15.3"
derive_more = { workspace = true }
libc = "0.2.147"
rand = "0.8.5"
rustix = { version = "0.38.32", features = ["time", "net", "event", "process"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
socket2 = "0.5.3"
static_assertions = "1.1.0"
structopt = "0.3.26"
termcolor = "1.2.0"
toml = "0.7.6"
whoami = "1.5.1"
xdg = "2.5.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [ "Win32_System_SystemInformation" ] }
